--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
     <div class="carousel-inner">
         <div class="active item">
 		<div class="caption zoomIn wow animated"> 		 
-              <h2>BEAUTY <br/><strong>Beauty can be seen in all things</strong></h2>
+               <h2>NANDU BHAI RainBo SPA<br/><strong style="color:blanchedalmond">Beauty can be seen in all things</strong></h2>
               </div>
 			  
 		<img class="" src="img/slide1.jpg" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			 
-              <h2>SPA<br/><strong>Best Dreams Happen</strong></h2>
+              <h2>NANDU BHAI RainBo SPA<br/><strong style="color:blanchedalmond">Best Dreams Happen</strong></h2>
               </div>
 			  <img class="" src="img/slide2.jpg" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			
-              <h2>HAIR STYLE<br/><strong>Take it before its too late</strong></h2>
+              <h2>Massage<br/><strong style="color:blanchedalmond">Take it before its too late</strong></h2>
              </div><img class="" src="img/slide3.jpg" alt=""></div>
     </div>
     <!-- Carousel nav -->
@@ -89,9 +89,9 @@
 									</p>
 
 									<ul class="about-us-list">
-										<li class="points">Consectetur Morbi sagittis, sem quisci ipsum gravida tortor</li> 
-                                        <li class="points">Sagittis, sem quis lacinia faucibus, orci ipsum gravida </li>
-										<li class="points">Ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci</li>
+										<li class="points">HYDERABAD</li> 
+                                                                                <li class="points">BANGLORE</li>
+                                                                                <li class="points">CHENNAI</li>
 									</ul><!-- /.about-us-list -->
 								 
       </div>
