--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Beauty Salon Bootstrap HTML5 Template | Webthemez</title>
+<title>RainBO SPA Services IN HYDERABAD</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
@@ -29,18 +29,18 @@
     <div class="carousel-inner">
         <div class="active item">
 		<div class="caption zoomIn wow animated"> 		 
-               <h2>NANDU BHAI RainBo SPA<br/><strong style="color:blanchedalmond">Beauty can be seen in all things</strong></h2>
+               <h2>RainBo SPA<br/><strong style="color:blanchedalmond">Beauty can be seen in all things</strong></h2>
               </div>
 			  
 		<img class="" src="img/slide1.jpg" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			 
-              <h2>NANDU BHAI RainBo SPA<br/><strong style="color:blanchedalmond">Best Dreams Happen</strong></h2>
+              <h2>OIL Massage<br/><strong style="color:blanchedalmond">Best Dreams Happen</strong></h2>
               </div>
 			  <img class="" src="img/slide2.jpg" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			
-              <h2>Massage<br/><strong style="color:blanchedalmond">Take it before its too late</strong></h2>
+              <h2>Thai Massage<br/><strong style="color:blanchedalmond">Take it before its too late</strong></h2>
              </div><img class="" src="img/slide3.jpg" alt=""></div>
     </div>
     <!-- Carousel nav -->
@@ -76,8 +76,8 @@
 <section id="aboutUs"><!--Aboutus-->
 <div class="inner_wrapper about-us aboutUs-container fadeInLeft animated wow">
   <div class="container">
-    <h2>About Us</h2>
-	<h6>A persone who loves Nature and It's creations</h6>
+    <h2>RainBo SPA || Hyderabad, Bangalore, Chennai ||</h2>
+	<h6>About Us</h6>
     <div class="inner_section">
  <div class="row">
       <div class="col-md-6"> <img class="img-responsive" src="img/about1.png" align=""> </div>
@@ -135,7 +135,11 @@
           </div>
         </div>
 		  <div class="col-md-3">
-		<div class="service_icon icon3  delay-03s animated wow zoomIn"> <span><img src="https://media.istockphoto.com/id/463498243/photo/woman-having-a-massage.jpg?s=612x612&w=0&k=20&c=3Wer06WjGKXA1c3pFop83gOcNiu40mOa2jYO_ShgAgM=" alt="Spa Icon"></span> </div>
+		<div class="service_icon icon3 delay-03s animated wow zoomIn" style="text-align: center;"> 
+    <span style="display: inline-block;">
+        <img src="https://img.lovepik.com/free-png/20211207/lovepik-female-head-relaxing-massage-png-image_401390297_wh1200.png" alt="Spa Icon" style="display: block; margin: 0 auto;">
+    </span> 
+</div>
           <div class="service_block">
             
             <h3 class="animated fadeInUp wow">Swedish Massage</h3>
