--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 <section id="aboutUs"><!--Aboutus-->
 <div class="inner_wrapper about-us aboutUs-container fadeInLeft animated wow">
   <div class="container">
-    <h2>RainBo SPA || Hyderabad, Bangalore, Chennai ||</h2>
-	<h6>About Us</h6>
+                     <h2>RainBo SPA</h2>
+	  <h2>|| Hyderabad, Bangalore, Chennai ||</h2>
     <div class="inner_section">
  <div class="row">
       <div class="col-md-6"> <img class="img-responsive" src="img/about1.png" align=""> </div>
       <div class="col-md-6">
-        <h3>An Opulent Spa Destination. A Spa Experience That Indulges all your Senses.</h3>
+        <h3>About Us</h3>
         <p>A 5-Star Spa Experience Bridging the Gap between You and Your Wellness Goals Rainbo Spa immerses you in a natural paradise of intense repair and rejuvenation while nestling you within relaxing ambiences at its luxury spa in Hyderabad.</p> 
          
         <p>Rainbo Spa is a key player in Best Spa in Delhi, Best Spa in Middle Hyderabad, Best Body Massage Center in Middle Hyderabad. Rainbo Spa known for Best Thai Spa in Middle Hyderabad also Best Thai Spa in Hyderabad. 
