--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		  <div class="col-md-3">
 		<div class="service_icon icon3 delay-03s animated wow zoomIn" style="text-align: center;"> 
     <span style="display: inline-block;">
-        <img src="https://img.lovepik.com/free-png/20211207/lovepik-female-head-relaxing-massage-png-image_401390297_wh1200.png" alt="Spa Icon" style="display: block; margin: 0 auto;">
+        <img src="https://png.pngtree.com/png-vector/20220121/ourmid/pngtree-massage-png-image_4358919.png" alt="Spa Icon" style="display: block; margin: 0 auto;">
     </span> 
 </div>
           <div class="service_block">
