--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li data-target="#carousel" data-slide-to="2"></li>
         </ol>
         <a href="https://api.whatsapp.com/send?phone=918341318035" target="_blank" class="whatsapp-btn">
-            <img src="https://image.similarpng.com/very-thumbnail/2020/12/Green-Whatsapp-logo-on-transparent-PNG.png" alt="WhatsApp" width="60" height="60">
+            <img width="90" height="90" src="https://img.icons8.com/3d-fluency/1500/whatsapp.png" alt="whatsapp" />
         </a>
         <!-- Carousel items -->
         <div class="carousel-inner">
